# CRM_Project

./: .dockerignore  .gitignore  DEPLOY_RENDER.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  walkthrough.md
apps/accounts/: admin.py  dashboard.py  models.py  permissions.py  pwa_views.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/attachments/: models.py  serializers.py  urls.py  views.py
apps/companies/: admin.py  apps.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
apps/contracts/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/employees/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/finance/: models.py  serializers.py  urls.py  views.py
apps/reports/: models.py  pdf.py  serializers.py  tasks.py  urls.py  views.py
apps/services/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
config/: celery.py  settings.py  settings_test.py  urls.py
docker/: entrypoint.sh  nginx.conf
frontend/: .dockerignore  Dockerfile  build_error_docker_final.txt  build_log.txt  build_log_2.txt  build_log_3.txt  index.html  package-lock.json  package.json  vite.config.js  walkthrough.md
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: apiClient.js
static/: manifest.webmanifest  sw.js
templates/pwa/: offline.html
tests/: conftest.py  factories.py  test_accounts.py  test_companies.py  test_contracts.py  test_dashboard.py  test_employees.py  test_finance.py  test_reports.py
(+46 files in other folders)
